--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 title: Aunn raza
 email: aunn.raza@epfl.ch
 description: > # this means to ignore newlines until "url:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Aunn Raza homepage
 footer_text: 
   # >
   # Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
